fix: table alignment

--- a/static/style.css
+++ b/static/style.css
@@ -17,11 +17,14 @@ h1, h2, h3 {
 }
 
 /* Tables */
-table {
-  display: block;
+.table-wrapper {
   overflow-x: auto;
-  border-collapse: collapse;
   margin: 1em 0;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
 }
 
 th, td {
